--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <BaseArtifactPath>$(SolutionDir)artifacts\</BaseArtifactPath>
-    <ArtifactPath>$(BaseArtifactPath)$(MSBuildProjectName)\</ArtifactPath>
+    <ArtifactPath>$(BaseArtifactPath)Build\$(MSBuildProjectName)\</ArtifactPath>
     <BaseOutputPath>$(ArtifactPath)bin</BaseOutputPath>
     <BaseIntermediateOutputPath>$(ArtifactPath)obj</BaseIntermediateOutputPath>
   </PropertyGroup>
