--- a/src/System.CommandLine/Directory.Build.props
+++ b/src/System.CommandLine/Directory.Build.props
@@ -4,6 +4,7 @@
     <UseBetaVersion>true</UseBetaVersion>
   </PropertyGroup>
 
+  <Import Project="Maids.props" />
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
-
+  
 </Project>
