Update System.CommandLine.csproj: Exposed internals to `Maid`

--- a/src/System.CommandLine/System.CommandLine.csproj
+++ b/src/System.CommandLine/System.CommandLine.csproj
@@ -52,6 +52,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="System.CommandLine.NamingConventionBinder" />
+    <InternalsVisibleTo Include="Maid" />
   </ItemGroup>
 
 </Project>
